--- a/Restaurant/Nd/templates/Nd/Menu.html
+++ b/Restaurant/Nd/templates/Nd/Menu.html
@@ -1,23 +1,16 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Menu</title>
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
-      integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l"
-      crossorigin="anonymous"
-    />
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" rel="stylesheet">
-</head>
-<body>
-    <style>
-        
-    </style>
+{% extends 'Main.html' %}
 
+{% load static %}
+
+{% block title_link %}
+    <title>NamasteDaju Restaurant Menu</title>
+{% endblock %}
+
+{% block css_link %}
+    <link href="{% static 'css/Menu.css' %}" rel="stylesheet" type="text/css"/>
+{% endblock %}
+
+{% block content %}
     <div class="container-fluid d-flex flex-column" id="Menu">
         <div class="container d-flex justify-content-center">
             <h1>Delicious Food For You</h1>
@@ -53,21 +46,8 @@
 
         </div>
     </div>
+{% endblock %}
 
-
-    <script>
-
-    </script>
-
-    <script
-      src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-      integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-      crossorigin="anonymous"
-    ></script>
-    <script 
-    src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" 
-    integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" 
-    crossorigin="anonymous">
-    </script>
-</body>
-</html>
+{% block script_link%}
+        <script src="{% static 'js/Menu.js' %}"></script>
+{% endblock %}
