--- a/Restaurant/templates/Navbar.html
+++ b/Restaurant/templates/Navbar.html
@@ -1,10 +1,75 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+<span class="fa fa-angle-double-up font-weight-bold" id="TopScroll" onclick="ScrollUp()"></span>
 
-</body>
-</html>
+<div class="container-fluid d-flex flex-row justify-content-between p-0 m" id="Header">
+    <div class="container">
+        <nav class="navbar navbar-expand-lg">
+            <h1><a class="navbar-brand mr-lg-5 font-weight-bold" href="#">Namaste<span id="navbar_brand_span">Daju</span></a></h1>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item mx-sm-1">
+                      <a class="nav-link font-weight-bold {{home}} header_nav_link"  href="/Nd/home">Home <span class="sr-only">(current)</span></a>
+                    </li>
+                    <li class="nav-item mx-sm-1">
+                      <a class="nav-link font-weight-bold {{menu}} header_nav_link" href="/Nd/menu">Menu</a>
+                    </li>
+                    <li class="nav-item mx-sm-1">
+                        <a class="nav-link font-weight-bold header_nav_link" href="#">Gallery</a>
+                      </li>
+                    <li class="nav-item mx-sm-1">
+                      <a class="nav-link font-weight-bold header_nav_link" href="#">Stories</a>
+                    </li>
+                    <li class="nav-item mx-sm-1">
+                      <a class="nav-link font-weight-bold header_nav_link" href="#">Reservation</a>
+                    </li>
+                    <li class="nav-item mx-sm-1">
+                        <a class="nav-link font-weight-bold header_nav_link" href="#">Catering</a>
+                    </li>
+                    <li class="nav-item mx-sm-1">
+                      <a class="nav-link font-weight-bold header_nav_link" href="#">Contact</a>
+                    </li>
+                  </ul>
+            </div>
+        </nav>
+    </div>
+    <div class="d-sm-flex flex-row py-3 mr-sm-3" id="Buttons">
+        <div class="d-flex flex-column">
+            <a class="btn btn-style font-weight-bold px-sm-4 lb" onclick="show()">Login</a>
+            <form class="d-flex flex-column mt-2 p-4" method="POST" id="Form">
+                <span class="fa fa-times" onclick="hide()"></span>
+                <div class="form-group">
+                    <label for="email" class="font-weight-bold flb">Email:</label>
+                    <input type="email" class="form-control" id="email" aria-describedby="emailHelp" name="email" placeholder="Enter email">
+                    <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+                </div>
+                <div class="form-group">
+                    <label for="password" class="font-weight-bold flb">Password:</label>
+                    <input type="password" class="form-control" id="password" name="password" placeholder="Password">
+                </div>
+                <div class="container d-flex justify-content-center">
+                    <button type="submit" class="btn font-weight-bold mb-2">Login</button>
+                </div>
+                <div class="container d-flex justify-content-center">
+                    <small class="form-text text-muted">Don't have an account!</small>
+                </div>
+                <div class="container d-flex justify-content-center">
+                    <a href="#" class="btn btn-style font-weight-bold" >SignUp</a>
+                </div>
+            </form>
+        </div>
+        <div id="Moon">
+            <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-moon ml-lg-3 mt-1" onclick="dark()" viewBox="0 0 16 16">
+                <path fill-rule="evenodd" d="M14.53 10.53a7 7 0 0 1-9.058-9.058A7.003 7.003 0 0 0 8 15a7.002 7.002 0 0 0 6.53-4.47z"/>
+            </svg>
+        </div>
+
+       <div id="Sun">
+        <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-brightness-high ml-lg-3 mt-1" onclick="white()" viewBox="0 0 16 16">
+            <path d="M8 11a3 3 0 1 1 0-6 3 3 0 0 1 0 6zm0 1a4 4 0 1 0 0-8 4 4 0 0 0 0 8zM8 0a.5.5 0 0 1 .5.5v2a.5.5 0 0 1-1 0v-2A.5.5 0 0 1 8 0zm0 13a.5.5 0 0 1 .5.5v2a.5.5 0 0 1-1 0v-2A.5.5 0 0 1 8 13zm8-5a.5.5 0 0 1-.5.5h-2a.5.5 0 0 1 0-1h2a.5.5 0 0 1 .5.5zM3 8a.5.5 0 0 1-.5.5h-2a.5.5 0 0 1 0-1h2A.5.5 0 0 1 3 8zm10.657-5.657a.5.5 0 0 1 0 .707l-1.414 1.415a.5.5 0 1 1-.707-.708l1.414-1.414a.5.5 0 0 1 .707 0zm-9.193 9.193a.5.5 0 0 1 0 .707L3.05 13.657a.5.5 0 0 1-.707-.707l1.414-1.414a.5.5 0 0 1 .707 0zm9.193 2.121a.5.5 0 0 1-.707 0l-1.414-1.414a.5.5 0 0 1 .707-.707l1.414 1.414a.5.5 0 0 1 0 .707zM4.464 4.465a.5.5 0 0 1-.707 0L2.343 3.05a.5.5 0 1 1 .707-.707l1.414 1.414a.5.5 0 0 1 0 .708z"/>
+        </svg>
+       </div>
+    </div>
+</div>
