--- a/Restaurant/Nd/templates/Nd/Home.html
+++ b/Restaurant/Nd/templates/Nd/Home.html
@@ -26,7 +26,7 @@
                               <a class="nav-link font-weight-bold {{home}} header_nav_link" href="/Nd/home">Home <span class="sr-only">(current)</span></a>
                             </li>
                             <li class="nav-item mx-sm-1">
-                              <a class="nav-link font-weight-bold {{menu}} header_nav_link" href="/Nd/menu">Menu</a>
+                              <a class="nav-link font-weight-bold header_nav_link" href="/Nd/menu">Menu</a>
                             </li>
                             <li class="nav-item mx-sm-1">
                                 <a class="nav-link font-weight-bold header_nav_link" href="#">Gallery</a>
@@ -114,7 +114,7 @@
         </div>
     </div>
 
-      <div class="container-fluid d-lg-flex justify-content-between px-sm-5" id="About">
+    <div class="container-fluid d-lg-flex justify-content-between px-sm-5" id="About">
         <div class="mx-sm-5 mt-sm-2" id="Image">
             <img class="img-fluid rounded" src='{% static "images/home/restaurant.jpg" %}'/>
         </div>
@@ -131,7 +131,6 @@
           </p>
           <a href="#" class="btn font-weight-bold px-5 py-2">View Our Stories</a>
         </div>
-      </div>
     </div>
 
     <div class="container-fluid d-sm-flex flex-column px-sm-5" id="Services">
