--- a/Restaurant/Nd/templates/Nd/Menu.html
+++ b/Restaurant/Nd/templates/Nd/Menu.html
@@ -11,17 +11,81 @@
 {% endblock %}
 
 {% block content %}
-    <div class="container-fluid d-flex flex-column" id="Menu">
-        <div class="container d-flex justify-content-center">
+    <div class="container-fluid" id="Front">
+        <div class="container-fluid py-4"  id="nav">
+            <div class="container" id="navbar">
+                <nav class="navbar navbar-expand-lg">
+                    <h1><a class="navbar-brand font-weight-bold" href="#">Namaste<span id="navbar_brand_span">Daju</span></a></h1>
+                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                      <span class="navbar-toggler-icon"></span>
+                    </button>
+
+                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                        <ul class="navbar-nav ml-auto">
+                            <li class="nav-item mx-sm-1">
+                              <a class="nav-link font-weight-bold header_nav_link" href="/Nd/home">Home <span class="sr-only">(current)</span></a>
+                            </li>
+                            <li class="nav-item mx-sm-1">
+                              <a class="nav-link font-weight-bold {{menu}} header_nav_link" href="/Nd/menu">Menu</a>
+                            </li>
+                            <li class="nav-item mx-sm-1">
+                                <a class="nav-link font-weight-bold header_nav_link" href="#">Gallery</a>
+                              </li>
+                            <li class="nav-item mx-sm-1">
+                              <a class="nav-link font-weight-bold header_nav_link" href="#">Stories</a>
+                            </li>
+                            <li class="nav-item mx-sm-1">
+                              <a class="nav-link font-weight-bold header_nav_link" href="#">Reservation</a>
+                            </li>
+                            <li class="nav-item mx-sm-1">
+                                <a class="nav-link font-weight-bold header_nav_link" href="#">Catering</a>
+                            </li>
+                            <li class="nav-item mx-sm-1">
+                              <a class="nav-link font-weight-bold header_nav_link" href="#">Contact</a>
+                            </li>
+                          </ul>
+                    </div>
+                </nav>
+            </div>
+        </div>
+        <div class="container-fluid d-flex flex-column justify-content-center" id="HM">
+            <div class="container d-flex justify-content-center">
+                <h1>Menu</h1>
+            </div>
+            <div class="container d-flex justify-content-center">
+                <h5><a href="/Nd/home">Home <span class="fa fa-chevron-right"></span> </a> Menu <span class="fa fa-chevron-right"></span></h5>
+            </div>
+        </div>
+    </div>
+
+    <div class="container-fluid d-flex flex-column py-5" id="Menu">
+        <div class="container d-flex justify-content-center py-sm-5" id="MH">
             <h1>Delicious Food For You</h1>
         </div>
-        <div class="container d-flex flex-column justify-content-between" id="Breakfast">
-            <div class="container-fluid d-flex flex-lg-row justify-content-between">
-                <div class="container d-flex justify-content-center">
-                    <h1>Delicious Food For You</h1>
+        <div class="container d-flex flex-column justify-content-between mb-5" id="Breakfast">
+            <div class="card d-flex flex-lg-column justify-content-between py-3">
+                <div class="container d-flex flex-row justify-content-center MCH">
+                    <span class="fas fa-hamburger mr-4"></span>
+                    <h1>Breakfast</h1>
                 </div>
-                <div class="container-fluid d-flex flex-sm-row justify-content-between">
-                    <img />
+                <div class="container-fluid d-flex flex-sm-row justify-content-between MCL">
+                    <img class="img-fluid " src="{% static 'images/menu/3.png' %}" alt="pic"/>
+                    <div class="container-fluid d-flex flex-column justify-content-between">
+                            <h3>Beef Roast Source</h3>
+                            <p>Meat, Potatoes, Rice, Tomatoe</p>
+                            <h3>Rs. 290</h3>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="container d-flex flex-column justify-content-between  mb-5" id="Lunch">
+            <div class="card d-flex flex-lg-column justify-content-between py-3">
+                <div class="container d-flex flex-row justify-content-center MCH">
+                    <span class="fas fa-hotdog mr-4"></span>
+                    <h1>Lunch</h1>
+                </div>
+                <div class="container-fluid d-flex flex-sm-row justify-content-between MCL">
+                    <img class="img-fluid " src="" alt="pic"/>
                     <div class="container-fluid d-flex flex-column justify-content-between">
                             <h1></h1>
                             <p></p>
@@ -30,24 +94,124 @@
                 </div>
             </div>
         </div>
-        <div class="container d-flex flex-column justify-content-between" id="Lunch">
-
+        <div class="container d-flex flex-column justify-content-between mb-5" id="Dinner">
+            <div class="card d-flex flex-lg-column justify-content-between py-3">
+                <div class="container d-flex flex-row justify-content-center MCH">
+                    <span class="fas fa-fish mr-4"></span>
+                    <h1>Dinner</h1>
+                </div>
+                <div class="container-fluid d-flex flex-sm-row justify-content-between MCL">
+                    <img class="img-fluid " src="" alt="pic"/>
+                    <div class="container-fluid d-flex flex-column justify-content-between">
+                            <h1></h1>
+                            <p></p>
+                            <h3></h3>
+                    </div>
+                </div>
+            </div>
         </div>
-        <div class="container d-flex flex-column justify-content-between" id="Dinner">
-
+        <div class="container d-flex flex-column justify-content-between mb-5" id="Desserts">
+            <div class="card d-flex flex-lg-column justify-content-between py-3">
+                <div class="container d-flex flex-row justify-content-center MCH">
+                    <span class="fas fa-ice-cream mr-4"></span>
+                    <h1>Deserts</h1>
+                </div>
+                <div class="container-fluid d-flex flex-sm-row justify-content-between MCL">
+                    <img class="img-fluid " src="" alt="pic"/>
+                    <div class="container-fluid d-flex flex-column justify-content-between">
+                            <h1></h1>
+                            <p></p>
+                            <h3></h3>
+                    </div>
+                </div>
+            </div>
         </div>
-        <div class="container d-flex flex-column justify-content-between" id="Desserts">
-
-        </div>
-        <div class="container d-flex flex-column justify-content-between" id="Wine Card">
-
+        <div class="container d-flex flex-column justify-content-between mb-5" id="Wine Card">
+            <div class="card d-flex flex-lg-column justify-content-between py-3">
+                <div class="container d-flex flex-row justify-content-center MCH">
+                    <span class="fas fa-wine-glass mr-4"></span>
+                    <h1>Wine Card</h1>
+                </div>
+                <div class="container-fluid d-flex flex-sm-row justify-content-between MCL">
+                    <img class="img-fluid " src="" alt="pic"/>
+                    <div class="container-fluid d-flex flex-column justify-content-between">
+                            <h1></h1>
+                            <p></p>
+                            <h3></h3>
+                    </div>
+                </div>
+            </div>
         </div>
         <div class="container d-flex flex-column justify-content-between" id="Drinks & Tea">
-
+            <div class="card d-flex flex-lg-column justify-content-between py-3">
+                <div class="container d-flex flex-row justify-content-center MCH">
+                    <span class="fas fa-cocktail mr-4"></span>
+                    <h1>Drinks & Tea</h1>
+                </div>
+                <div class="container-fluid d-flex flex-sm-row justify-content-between MCL">
+                    <img class="img-fluid " src="" alt="pic"/>
+                    <div class="container-fluid d-flex flex-column justify-content-between">
+                            <h1></h1>
+                            <p></p>
+                            <h3></h3>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
+
+    <div class="container-fluid d-lg-flex flex-lg-row justify-content-around px-lg-5" id="AUOC">
+        <div id="About1">
+          <h3 class="font-weight-bold heading">NamasteDaju restaurant</h3>
+          <p>
+            Keep in touch with us. <br/>
+            Be updated with our menus, <br/>
+            services, taste and flavors <br/>
+            of our food. Follow us in <br/>
+            the social medias.
+          </p>
+          <div class="fa_icon mt-4" id="Icons">
+            <a href="#facebook" class="facebook mr-sm-3"><span class="fab fa-facebook-f"></span></a>
+            <a href="#twitter" class="twitter mr-sm-3"><span class="fab fa-twitter"></span></a>
+            <a href="#instagram" class="instagram mr-sm-3"><span class="fab fa-instagram"></span></a>
+            <a href="#linkedin" class="linkedin mr-sm-3"><span class="fab fa-linkedin"></span></a>
+            <a href="#youtube" class="youtube mr-sm-3"><span class="fab fa-youtube"></span></a>
+          </div>
+        </div>
+        <div id="Useful Links">
+            <h3 class="font-weight-bold heading">Useful Links</h3>
+            <ul class="p-0">
+              <li><a href="index.html">Menu</a></li>
+              <li><a href="about.html">Stories</a></li>
+              <li><a href="services.html">Gallery</a></li>
+              <li><a href="blog.html">Reservations</a></li>
+              <li><a href="contact.html">Location</a></li>
+            </ul>
+          </div>
+        <div id="OpenHours">
+            <h3 class="font-weight-bold heading">Open Hours</h3>
+            <ul class="p-0">
+                <li><a href="index.html">Monday......................Closed</a></li>
+                <li><a href="about.html">Tue-Fri..............10am-12pm</a></li>
+                <li><a href="services.html">Sat-Sun...............8am-11pm</a></li>
+                <li><a href="blog.html">Holidays.............10am-12pm</a></li>
+            </ul>
+        </div>
+        <div id="Contact Us">
+          <h3 class="font-weight-bold heading">Contact Us</h3>
+          <ul class="p-0">
+            <li><a href="" class="mx-0 my-0"><span class="fas fa-map-marker-alt mr-2"></span>NamasteDaju 1st Floor, Chhaya Center, Kathmandu</a></li>
+            <li><a href="tel:+7-800-999-800"><span class="fa fa-phone mr-2"></span> +(21)-255-999-8888</a></li>
+            <li><a href="mailto:Agricfarm@mail.com" class="mail"><span class="fa fa-envelope mr-2"></span>NamasteDaju@mail.com</a></li>
+          </ul>
+        </div>
+      </div>
+
+      <div class="container-fluid d-flex justify-content-center py-2" id="Copyright">
+        <p>Copyright ©2021 All rights reserved. Design by <a href="#">Gauri Shankar Sharma</a></p>
+      </div>
 {% endblock %}
 
-{% block script_link%}
+{% block script_link %}
         <script src="{% static 'js/Menu.js' %}"></script>
 {% endblock %}
