--- a/Restaurant/Nd/templates/Nd/Home.html
+++ b/Restaurant/Nd/templates/Nd/Home.html
@@ -116,7 +116,7 @@
 
     <div class="container-fluid d-lg-flex justify-content-between px-sm-5" id="About">
         <div class="mx-sm-5 mt-sm-2" id="Image">
-            <img class="img-fluid rounded" src='{% static "images/home/restaurant.jpg" %}'/>
+            <img class="img-fluid" src='{% static "images/home/restaurant.jpg" %}'/>
         </div>
         <div class="container" id="Description">
           <p class="pr-4 mb-0">About Us</p>
