--- a/Restaurant/Nd/templates/Nd/Menu.html
+++ b/Restaurant/Nd/templates/Nd/Menu.html
@@ -62,98 +62,126 @@
         <div class="container d-flex justify-content-center py-sm-5" id="MH">
             <h1>Delicious Food For You</h1>
         </div>
-        <div class="container d-flex flex-column justify-content-between mb-5" id="Breakfast">
-            <div class="card d-flex flex-lg-column justify-content-between py-3">
-                <div class="container d-flex flex-row justify-content-center MCH">
-                    <span class="fas fa-hamburger mr-4"></span>
-                    <h1>Breakfast</h1>
-                </div>
-                <div class="container-fluid d-flex flex-sm-row justify-content-between MCL">
-                    <img class="img-fluid " src="{% static 'images/menu/3.png' %}" alt="pic"/>
-                    <div class="container-fluid d-flex flex-column justify-content-between">
-                            <h3>Beef Roast Source</h3>
-                            <p>Meat, Potatoes, Rice, Tomatoe</p>
-                            <h3>Rs. 290</h3>
+        <div class="container-fluid d-lg-flex flex-row justify-content-between mb-5">
+            <div class="container mb-5" id="Breakfast">
+                <div class="card d-flex flex-column justify-content-between py-4">
+                    <div class="container d-flex flex-row justify-content-center pb-4 MCH">
+                        <span class="fas fa-hamburger mr-4"></span>
+                        <h1>Breakfast</h1>
+                    </div>
+                    <div class="container-fluid d-flex flex-lg-row justify-content-between mb-4 MCL">
+                        <div class="container d-xl-flex flex-row justify-content-between">
+                            <div class="mr-lg-2 mb-4" id="Image">
+                                <img class="img-fluid" src="{% static 'images/menu/3.png' %}" alt="pic"/>
+                            </div>
+                            <div class="container d-flex flex-column justify-content-between" id="Detail">
+                                    <h3 class="Dh3">Beef Roast Source</h3>
+                                    <p  class="Dp">Meat, Potatoes, Rice, Tomatoe</p>
+                                    <h4 class="Dh4">Rs. 290</h4>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
-        </div>
-        <div class="container d-flex flex-column justify-content-between  mb-5" id="Lunch">
-            <div class="card d-flex flex-lg-column justify-content-between py-3">
-                <div class="container d-flex flex-row justify-content-center MCH">
-                    <span class="fas fa-hotdog mr-4"></span>
-                    <h1>Lunch</h1>
-                </div>
-                <div class="container-fluid d-flex flex-sm-row justify-content-between MCL">
-                    <img class="img-fluid " src="" alt="pic"/>
-                    <div class="container-fluid d-flex flex-column justify-content-between">
-                            <h1></h1>
-                            <p></p>
-                            <h3></h3>
+            <div class="container mb-5" id="Lunch">
+                <div class="card d-flex flex-column justify-content-between py-4">
+                    <div class="container d-flex flex-row justify-content-center pb-4 MCH">
+                        <span class="fas fa-hotdog mr-4"></span>
+                        <h1>Lunch</h1>
+                    </div>
+                    <div class="container-fluid d-flex flex-lg-row justify-content-between mb-4 MCL">
+                        <div class="container d-xl-flex flex-sm-row justify-content-between">
+                            <div class="mr-lg-2 mb-4" id="Image">
+                                <img class="img-fluid" src="{% static 'images/menu/3.png' %}" alt="pic"/>
+                            </div>
+                            <div class="container d-flex flex-column justify-content-between"  id="Detail">
+                                    <h3 class="Dh3">Beef Roast Source</h3>
+                                    <p class="Dp">Meat, Potatoes, Rice, Tomatoe</p>
+                                    <h4 class="Dh4">Rs. 290</h4>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
-        </div>
-        <div class="container d-flex flex-column justify-content-between mb-5" id="Dinner">
-            <div class="card d-flex flex-lg-column justify-content-between py-3">
-                <div class="container d-flex flex-row justify-content-center MCH">
-                    <span class="fas fa-fish mr-4"></span>
-                    <h1>Dinner</h1>
+            <div class="container mb-5" id="Dinner">
+                <div class="card d-flex flex-column justify-content-between py-4">
+                    <div class="container d-flex flex-row justify-content-center pb-4 MCH">
+                        <span class="fas fa-fish mr-4"></span>
+                        <h1>Dinner</h1>
+                    </div>
+                    <div class="container-fluid d-flex flex-lg-row justify-content-between mb-4 MCL">
+                        <div class="container d-xl-flex flex-sm-row justify-content-between">
+                            <div class="mr-lg-2 mb-4" id="Image">
+                                <img class="img-fluid" src="{% static 'images/menu/3.png' %}" alt="pic"/>
+                            </div>
+                            <div class="container d-flex flex-column justify-content-between" id="Detail">
+                                    <h3 class="Dh3">Beef Roast Source</h3>
+                                    <p  class="Dp">Meat, Potatoes, Rice, Tomatoe</p>
+                                    <h4 class="Dh4">Rs. 290</h4>
+                            </div>
+                        </div>
+                    </div>
                 </div>
-                <div class="container-fluid d-flex flex-sm-row justify-content-between MCL">
-                    <img class="img-fluid " src="" alt="pic"/>
-                    <div class="container-fluid d-flex flex-column justify-content-between">
-                            <h1></h1>
-                            <p></p>
-                            <h3></h3>
+            </div>        
+        </div>
+        <div class="container-fluid d-lg-flex flex-row justify-content-between mb-5">
+            <div class="container mb-5" id="Deserts">
+                <div class="card d-flex flex-column justify-content-between py-4">
+                    <div class="container d-flex flex-row justify-content-center pb-4 MCH">
+                        <span class="fas fa-ice-cream mr-4"></span>
+                        <h1>Deserts</h1>
+                    </div>
+                    <div class="container-fluid d-flex flex-lg-row justify-content-between mb-4 MCL">
+                        <div class="container d-xl-flex flex-sm-row justify-content-between">
+                            <div class="mr-lg-2 mb-4" id="Image">
+                                <img class="img-fluid" src="{% static 'images/menu/3.png' %}" alt="pic"/>
+                            </div>
+                            <div class="container d-flex flex-column justify-content-between"  id="Detail">
+                                    <h3 class="Dh3">Beef Roast Source</h3>
+                                    <p  class="Dp">Meat, Potatoes, Rice, Tomatoe</p>
+                                    <h4 class="Dh4">Rs. 290</h4>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
-        </div>
-        <div class="container d-flex flex-column justify-content-between mb-5" id="Desserts">
-            <div class="card d-flex flex-lg-column justify-content-between py-3">
-                <div class="container d-flex flex-row justify-content-center MCH">
-                    <span class="fas fa-ice-cream mr-4"></span>
-                    <h1>Deserts</h1>
-                </div>
-                <div class="container-fluid d-flex flex-sm-row justify-content-between MCL">
-                    <img class="img-fluid " src="" alt="pic"/>
-                    <div class="container-fluid d-flex flex-column justify-content-between">
-                            <h1></h1>
-                            <p></p>
-                            <h3></h3>
+            <div class="container mb-5" id="Wine_Card">
+                <div class="card d-flex flex-column justify-content-between py-4">
+                    <div class="container d-flex flex-row justify-content-center pb-4 MCH">
+                        <span class="fas fa-wine-glass mr-4"></span>
+                        <h1>Wine Card</h1>
+                    </div>
+                    <div class="container-fluid d-flex flex-lg-row justify-content-between mb-4 MCL">
+                        <div class="container d-xl-flex flex-sm-row justify-content-between">
+                            <div class="mr-lg-2 mb-4" id="Image">
+                                <img class="img-fluid" src="{% static 'images/menu/3.png' %}" alt="pic"/>
+                            </div>
+                            <div class="container d-flex flex-column justify-content-between" id="Detail">
+                                    <h3 class="Dh3">Beef Roast Source</h3>
+                                    <p class="Dp">Meat, Potatoes, Rice, Tomatoe</p>
+                                    <h4 class="Dh4">Rs. 290</h4>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
-        </div>
-        <div class="container d-flex flex-column justify-content-between mb-5" id="Wine Card">
-            <div class="card d-flex flex-lg-column justify-content-between py-3">
-                <div class="container d-flex flex-row justify-content-center MCH">
-                    <span class="fas fa-wine-glass mr-4"></span>
-                    <h1>Wine Card</h1>
-                </div>
-                <div class="container-fluid d-flex flex-sm-row justify-content-between MCL">
-                    <img class="img-fluid " src="" alt="pic"/>
-                    <div class="container-fluid d-flex flex-column justify-content-between">
-                            <h1></h1>
-                            <p></p>
-                            <h3></h3>
+            <div class="container mb-5" id="Drinks_Tea">
+                <div class="card d-flex flex-column justify-content-between py-4">
+                    <div class="container d-flex flex-row justify-content-center pb-4 MCH">
+                        <span class="fas fa-cocktail mr-4"></span>
+                        <h1>Drinks & Tea</h1>
                     </div>
-                </div>
-            </div>
-        </div>
-        <div class="container d-flex flex-column justify-content-between" id="Drinks & Tea">
-            <div class="card d-flex flex-lg-column justify-content-between py-3">
-                <div class="container d-flex flex-row justify-content-center MCH">
-                    <span class="fas fa-cocktail mr-4"></span>
-                    <h1>Drinks & Tea</h1>
-                </div>
-                <div class="container-fluid d-flex flex-sm-row justify-content-between MCL">
-                    <img class="img-fluid " src="" alt="pic"/>
-                    <div class="container-fluid d-flex flex-column justify-content-between">
-                            <h1></h1>
-                            <p></p>
-                            <h3></h3>
+                    <div class="container-fluid d-flex flex-lg-row justify-content-between mb-4 MCL">
+                        <div class="container d-xl-flex flex-sm-row justify-content-between">
+                            <div class="mr-lg-2 mb-4" id="Image">
+                                <img class="img-fluid" src="{% static 'images/menu/3.png' %}" alt="pic"/>
+                            </div>
+                            <div class="container d-flex flex-column justify-content-between" id="Detail">
+                                    <h3 class="Dh3">Beef Roast Source</h3>
+                                    <p class="Dp">Meat, Potatoes, Rice, Tomatoe</p>
+                                    <h4 class="Dh4">Rs. 290</h4>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
