Galler, Reservation Completed

--- a/Restaurant/Nd/templates/Nd/Menu.html
+++ b/Restaurant/Nd/templates/Nd/Menu.html
@@ -23,26 +23,26 @@
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
                         <ul class="navbar-nav ml-auto">
                             <li class="nav-item mx-sm-1">
-                              <a class="nav-link font-weight-bold header_nav_link" href="/Nd/home">Home <span class="sr-only">(current)</span></a>
-                            </li>
-                            <li class="nav-item mx-sm-1">
-                              <a class="nav-link font-weight-bold {{menu}} header_nav_link" href="/Nd/menu">Menu</a>
-                            </li>
-                            <li class="nav-item mx-sm-1">
-                                <a class="nav-link font-weight-bold header_nav_link" href="#">Gallery</a>
+                                <a class="nav-link font-weight-bold {{home}} header_nav_link" href="/Nd/home">Home <span class="sr-only">(current)</span></a>
                               </li>
-                            <li class="nav-item mx-sm-1">
-                              <a class="nav-link font-weight-bold header_nav_link" href="#">Stories</a>
-                            </li>
-                            <li class="nav-item mx-sm-1">
-                              <a class="nav-link font-weight-bold header_nav_link" href="#">Reservation</a>
-                            </li>
-                            <li class="nav-item mx-sm-1">
-                                <a class="nav-link font-weight-bold header_nav_link" href="#">Catering</a>
-                            </li>
-                            <li class="nav-item mx-sm-1">
-                              <a class="nav-link font-weight-bold header_nav_link" href="#">Contact</a>
-                            </li>
+                              <li class="nav-item mx-sm-1">
+                                <a class="nav-link font-weight-bold {{menu}} header_nav_link" href="/Nd/menu">Menu</a>
+                              </li>
+                              <li class="nav-item mx-sm-1">
+                                  <a class="nav-link font-weight-bold {{gallery}} header_nav_link" href="/Nd/gallery">Gallery</a>
+                                </li>
+                              <li class="nav-item mx-sm-1">
+                                <a class="nav-link font-weight-bold {{stories}} header_nav_link" href="/Nd/stories">Stories</a>
+                              </li>
+                              <li class="nav-item mx-sm-1">
+                                <a class="nav-link font-weight-bold {{reservation}} header_nav_link" href="/Nd/reservation">Reservation</a>
+                              </li>
+                              <li class="nav-item mx-sm-1">
+                                  <a class="nav-link font-weight-bold {{catering}} header_nav_link" href="/Nd/catering">Catering</a>
+                              </li>
+                              <li class="nav-item mx-sm-1">
+                                <a class="nav-link font-weight-bold {{contact}} header_nav_link" href="/Nd/contact">Contact</a>
+                              </li>
                           </ul>
                     </div>
                 </nav>
@@ -72,12 +72,15 @@
                     <div class="container-fluid d-flex flex-lg-row justify-content-between mb-4 MCL">
                         <div class="container d-xl-flex flex-row justify-content-between">
                             <div class="mr-lg-2 mb-4" id="Image">
-                                <img class="img-fluid" src="{% static 'images/menu/3.png' %}" alt="pic"/>
+                                <img class="img-fluid" src="{% static 'images/uploads/menu/3.png' %}" alt="pic"/>
                             </div>
                             <div class="container d-flex flex-column justify-content-between" id="Detail">
-                                    <h3 class="Dh3">Beef Roast Source</h3>
-                                    <p  class="Dp">Meat, Potatoes, Rice, Tomatoe</p>
-                                    <h4 class="Dh4">Rs. 290</h4>
+                                <h3 class="Dh3">Beef Roast Source</h3>
+                                <p  class="Dp">Meat, Potatoes, Rice, Tomatoe</p>
+                                <h4 class="Dh4">Rs. 290</h4>
+                                <div class="d-flex justify-content-center">
+                                    <a class="btn btn-style font-weight-bold Da">Order Now</a>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -92,12 +95,15 @@
                     <div class="container-fluid d-flex flex-lg-row justify-content-between mb-4 MCL">
                         <div class="container d-xl-flex flex-sm-row justify-content-between">
                             <div class="mr-lg-2 mb-4" id="Image">
-                                <img class="img-fluid" src="{% static 'images/menu/3.png' %}" alt="pic"/>
+                                <img class="img-fluid" src="{% static 'images/uploads/menu/3.png' %}" alt="pic"/>
                             </div>
                             <div class="container d-flex flex-column justify-content-between"  id="Detail">
-                                    <h3 class="Dh3">Beef Roast Source</h3>
-                                    <p class="Dp">Meat, Potatoes, Rice, Tomatoe</p>
-                                    <h4 class="Dh4">Rs. 290</h4>
+                                <h3 class="Dh3">Beef Roast Source</h3>
+                                <p class="Dp">Meat, Potatoes, Rice, Tomatoe</p>
+                                <h4 class="Dh4">Rs. 290</h4>
+                                <div class="d-flex justify-content-center">
+                                    <a class="btn btn-style font-weight-bold Da">Order Now</a>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -112,12 +118,15 @@
                     <div class="container-fluid d-flex flex-lg-row justify-content-between mb-4 MCL">
                         <div class="container d-xl-flex flex-sm-row justify-content-between">
                             <div class="mr-lg-2 mb-4" id="Image">
-                                <img class="img-fluid" src="{% static 'images/menu/3.png' %}" alt="pic"/>
+                                <img class="img-fluid" src="{% static 'images/uploads/menu/3.png' %}" alt="pic"/>
                             </div>
                             <div class="container d-flex flex-column justify-content-between" id="Detail">
-                                    <h3 class="Dh3">Beef Roast Source</h3>
-                                    <p  class="Dp">Meat, Potatoes, Rice, Tomatoe</p>
-                                    <h4 class="Dh4">Rs. 290</h4>
+                                <h3 class="Dh3">Beef Roast Source</h3>
+                                <p  class="Dp">Meat, Potatoes, Rice, Tomatoe</p>
+                                <h4 class="Dh4">Rs. 290</h4>
+                                <div class="d-flex justify-content-center">
+                                    <a class="btn btn-style font-weight-bold Da">Order Now</a>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -134,12 +143,15 @@
                     <div class="container-fluid d-flex flex-lg-row justify-content-between mb-4 MCL">
                         <div class="container d-xl-flex flex-sm-row justify-content-between">
                             <div class="mr-lg-2 mb-4" id="Image">
-                                <img class="img-fluid" src="{% static 'images/menu/3.png' %}" alt="pic"/>
+                                <img class="img-fluid" src="{% static 'images/uploads/menu/3.png' %}" alt="pic"/>
                             </div>
                             <div class="container d-flex flex-column justify-content-between"  id="Detail">
-                                    <h3 class="Dh3">Beef Roast Source</h3>
-                                    <p  class="Dp">Meat, Potatoes, Rice, Tomatoe</p>
-                                    <h4 class="Dh4">Rs. 290</h4>
+                                <h3 class="Dh3">Beef Roast Source</h3>
+                                <p  class="Dp">Meat, Potatoes, Rice, Tomatoe</p>
+                                <h4 class="Dh4">Rs. 290</h4>
+                                <div class="d-flex justify-content-center">
+                                    <a class="btn btn-style font-weight-bold Da">Order Now</a>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -154,12 +166,15 @@
                     <div class="container-fluid d-flex flex-lg-row justify-content-between mb-4 MCL">
                         <div class="container d-xl-flex flex-sm-row justify-content-between">
                             <div class="mr-lg-2 mb-4" id="Image">
-                                <img class="img-fluid" src="{% static 'images/menu/3.png' %}" alt="pic"/>
+                                <img class="img-fluid" src="{% static 'images/uploads/menu/3.png' %}" alt="pic"/>
                             </div>
                             <div class="container d-flex flex-column justify-content-between" id="Detail">
-                                    <h3 class="Dh3">Beef Roast Source</h3>
-                                    <p class="Dp">Meat, Potatoes, Rice, Tomatoe</p>
-                                    <h4 class="Dh4">Rs. 290</h4>
+                                <h3 class="Dh3">Beef Roast Source</h3>
+                                <p class="Dp">Meat, Potatoes, Rice, Tomatoe</p>
+                                <h4 class="Dh4">Rs. 290</h4>
+                                <div class="d-flex justify-content-center">
+                                    <a class="btn btn-style font-weight-bold Da">Order Now</a>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -174,12 +189,15 @@
                     <div class="container-fluid d-flex flex-lg-row justify-content-between mb-4 MCL">
                         <div class="container d-xl-flex flex-sm-row justify-content-between">
                             <div class="mr-lg-2 mb-4" id="Image">
-                                <img class="img-fluid" src="{% static 'images/menu/3.png' %}" alt="pic"/>
+                                <img class="img-fluid" src="{% static 'images/uploads/menu/3.png' %}" alt="pic"/>
                             </div>
                             <div class="container d-flex flex-column justify-content-between" id="Detail">
-                                    <h3 class="Dh3">Beef Roast Source</h3>
-                                    <p class="Dp">Meat, Potatoes, Rice, Tomatoe</p>
-                                    <h4 class="Dh4">Rs. 290</h4>
+                                <h3 class="Dh3">Beef Roast Source</h3>
+                                <p class="Dp">Meat, Potatoes, Rice, Tomatoe</p>
+                                <h4 class="Dh4">Rs. 290</h4>
+                                <div class="d-flex justify-content-center">
+                                    <a class="btn btn-style font-weight-bold Da">Order Now</a>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -187,57 +205,6 @@
             </div>
         </div>
     </div>
-
-    <div class="container-fluid d-lg-flex flex-lg-row justify-content-around px-lg-5" id="AUOC">
-        <div id="About1">
-          <h3 class="font-weight-bold heading">NamasteDaju restaurant</h3>
-          <p>
-            Keep in touch with us. <br/>
-            Be updated with our menus, <br/>
-            services, taste and flavors <br/>
-            of our food. Follow us in <br/>
-            the social medias.
-          </p>
-          <div class="fa_icon mt-4" id="Icons">
-            <a href="#facebook" class="facebook mr-sm-3"><span class="fab fa-facebook-f"></span></a>
-            <a href="#twitter" class="twitter mr-sm-3"><span class="fab fa-twitter"></span></a>
-            <a href="#instagram" class="instagram mr-sm-3"><span class="fab fa-instagram"></span></a>
-            <a href="#linkedin" class="linkedin mr-sm-3"><span class="fab fa-linkedin"></span></a>
-            <a href="#youtube" class="youtube mr-sm-3"><span class="fab fa-youtube"></span></a>
-          </div>
-        </div>
-        <div id="Useful Links">
-            <h3 class="font-weight-bold heading">Useful Links</h3>
-            <ul class="p-0">
-              <li><a href="index.html">Menu</a></li>
-              <li><a href="about.html">Stories</a></li>
-              <li><a href="services.html">Gallery</a></li>
-              <li><a href="blog.html">Reservations</a></li>
-              <li><a href="contact.html">Location</a></li>
-            </ul>
-          </div>
-        <div id="OpenHours">
-            <h3 class="font-weight-bold heading">Open Hours</h3>
-            <ul class="p-0">
-                <li><a href="index.html">Monday......................Closed</a></li>
-                <li><a href="about.html">Tue-Fri..............10am-12pm</a></li>
-                <li><a href="services.html">Sat-Sun...............8am-11pm</a></li>
-                <li><a href="blog.html">Holidays.............10am-12pm</a></li>
-            </ul>
-        </div>
-        <div id="Contact Us">
-          <h3 class="font-weight-bold heading">Contact Us</h3>
-          <ul class="p-0">
-            <li><a href="" class="mx-0 my-0"><span class="fas fa-map-marker-alt mr-2"></span>NamasteDaju 1st Floor, Chhaya Center, Kathmandu</a></li>
-            <li><a href="tel:+7-800-999-800"><span class="fa fa-phone mr-2"></span> +(21)-255-999-8888</a></li>
-            <li><a href="mailto:Agricfarm@mail.com" class="mail"><span class="fa fa-envelope mr-2"></span>NamasteDaju@mail.com</a></li>
-          </ul>
-        </div>
-      </div>
-
-      <div class="container-fluid d-flex justify-content-center py-2" id="Copyright">
-        <p>Copyright ©2021 All rights reserved. Design by <a href="#">Gauri Shankar Sharma</a></p>
-      </div>
 {% endblock %}
 
 {% block script_link %}
