--- a/Restaurant/templates/Navbar.html
+++ b/Restaurant/templates/Navbar.html
@@ -11,26 +11,26 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item mx-sm-1">
-                      <a class="nav-link font-weight-bold {{home}} header_nav_link"  href="/Nd/home">Home <span class="sr-only">(current)</span></a>
-                    </li>
-                    <li class="nav-item mx-sm-1">
-                      <a class="nav-link font-weight-bold {{menu}} header_nav_link" href="/Nd/menu">Menu</a>
-                    </li>
-                    <li class="nav-item mx-sm-1">
-                        <a class="nav-link font-weight-bold header_nav_link" href="#">Gallery</a>
+                        <a class="nav-link font-weight-bold {{home}} header_nav_link" href="/Nd/home">Home <span class="sr-only">(current)</span></a>
                       </li>
-                    <li class="nav-item mx-sm-1">
-                      <a class="nav-link font-weight-bold header_nav_link" href="#">Stories</a>
-                    </li>
-                    <li class="nav-item mx-sm-1">
-                      <a class="nav-link font-weight-bold header_nav_link" href="#">Reservation</a>
-                    </li>
-                    <li class="nav-item mx-sm-1">
-                        <a class="nav-link font-weight-bold header_nav_link" href="#">Catering</a>
-                    </li>
-                    <li class="nav-item mx-sm-1">
-                      <a class="nav-link font-weight-bold header_nav_link" href="#">Contact</a>
-                    </li>
+                      <li class="nav-item mx-sm-1">
+                        <a class="nav-link font-weight-bold {{menu}} header_nav_link" href="/Nd/menu">Menu</a>
+                      </li>
+                      <li class="nav-item mx-sm-1">
+                          <a class="nav-link font-weight-bold {{gallery}} header_nav_link" href="/Nd/gallery">Gallery</a>
+                        </li>
+                      <li class="nav-item mx-sm-1">
+                        <a class="nav-link font-weight-bold {{stories}} header_nav_link" href="/Nd/stories">Stories</a>
+                      </li>
+                      <li class="nav-item mx-sm-1">
+                        <a class="nav-link font-weight-bold {{reservation}} header_nav_link" href="/Nd/reservation">Reservation</a>
+                      </li>
+                      <li class="nav-item mx-sm-1">
+                          <a class="nav-link font-weight-bold {{catering}} header_nav_link" href="/Nd/catering">Catering</a>
+                      </li>
+                      <li class="nav-item mx-sm-1">
+                        <a class="nav-link font-weight-bold {{contact}} header_nav_link" href="/Nd/contact">Contact</a>
+                      </li>
                   </ul>
             </div>
         </nav>
